--- a/submissioniii.Rmd
+++ b/submissioniii.Rmd
@@ -17,10 +17,89 @@ library(dplyr)
 library(tidyr)
 library(tidyverse)
 library(knitr)
+library(lme4)
+library(caret)
+library(groupdata2)
 ```
 
 ```{r load-data}
 final_df <- readRDS("data/final.rds")
+
+# Combining Asian and Other so model will converge
+final_df$SubjectRace[final_df$SubjectRace == "A"] <- "O"
+final_df$OfficerRace[final_df$OfficerRace == "A"] <- "O"
+
+final_df <- final_df %>% 
+  mutate(so = as.numeric(str_count(final_df$SubjectRace, "O|A") > 0),
+         oo = as.numeric(str_count(final_df$OfficerRace, "O|A") > 0)) %>% 
+  select(-c(sa, oa))
+
+single_victims <- final_df %>% 
+  filter(NumberOfSubjects <= 1) %>% 
+  mutate(SubjectRace = relevel(as.factor(SubjectRace), "W"))
+
+mult_victims <- final_df %>% 
+  filter(NumberOfSubjects > 1)
+```
+
+```{r}
+crossvalidate <- function(data, k, model, dependent, random = FALSE){
+  # 'data' is the training set with the ".folds" column
+  # 'k' is the number of folds we have
+  # 'model' is a string describing a linear regression model formula
+  # 'dependent' is a string with the name of the score column we want to predict
+  # 'random' is a logical; do we have random effects in the model?
+  
+  # Initialize empty list for recording performances
+  performances <- c()
+  
+  # One iteration per fold
+  for (fold in 1:k){
+    
+    # Create training set for this iteration
+    # Subset all the datapoints where .folds does not match the current fold
+    training_set <- data[data$.folds != fold,]
+    
+    # Create test set for this iteration
+    # Subset all the datapoints where .folds matches the current fold
+    testing_set <- data[data$.folds == fold,]
+    
+    ## Train model
+
+    # If there is a random effect,
+    # use glmer() to train model
+    # else use glm()
+
+    if (isTRUE(random)){
+      # Train linear mixed effects model on training set
+      m <- glmer(model, training_set, family = "binomial", control=glmerControl(optimizer="bobyqa",optCtrl=list(maxfun=2e5)))
+    } else {
+      # Train linear model on training set
+      m <- glm(model, training_set, family = "binomial", control=glm.control(maxit=50))
+    }
+
+    ## Test model
+
+    # Predict the dependent variable in the testing_set with the trained model
+    predicted <- predict(m, testing_set, type="response", allow.new.levels = TRUE)
+    fit.convert <- ifelse(predicted < 0.5, 0, 1)
+    table(fit.convert, testing_set[[dependent]])
+    performances[fold] <- mean(fit.convert == testing_set[[dependent]])
+  }
+
+  return(performances)
+}
+```
+
+```{r}
+getAccuracy <- function(v) {
+  if (length(v) == 4) {
+      return(((v[1] + v[4])/sum(v)) * 100)
+  }
+  if (length(v) == 2) {
+    return((v[1]/sum(v)) * 100)
+  }
+}
 ```
 
 ## I. Introduction
@@ -49,9 +128,14 @@ final_df <- readRDS("data/final.rds")
 
 ### Exploratory Data Analysis
 
-```{r, figures-city, fig.show="hold", out.width="30%", fig.cap="Race Proportions of Shooting Victims vs. City Population Demographics of the Most Popular 4 Cities in the Data "}
+```{r, figures-city1, fig.show="hold", out.width="50%"}
+par(mar = c(2, 2, .1, .1))
 knitr::include_graphics("figures/cityeda1.png")
 knitr::include_graphics("figures/cityeda2.png")
+```
+
+```{r, figures-city2, fig.show="hold", out.width="50%", fig.cap="Race Proportions of Shooting Victims vs. City Population Demographics of the Most Popular 4 Cities in the Data"}
+par(mar = c(2, 2, .1, .1))
 knitr::include_graphics("figures/cityeda3.png")
 knitr::include_graphics("figures/cityeda4.png")
 ```
@@ -90,73 +174,88 @@ knitr::include_graphics("figures/multeda2.png")
 
 |        To create these two models, I first performed backwards selection using simple logistic regression models on all relevant predictors in order to get a sense of which predictors are most statistically significant in prediction shooting fatality. Then, I added potential interactions that I wanted to explore one at a time and performed likelihood ratio tests with each new model iteration to check if the added interaction improved the previous model. Whether an interaction was statistically significant or not was determined by whether the likelihood ratio test's p-value was less than 0.05. Finally, I put these variables obtained from backwards selection into a random effects linear regression model with city as the random intercept and evaluated the fit of this model using cross validation, which I will describe in more detail in the Results section. From there, I tweaked the model by experimenting with additional predictors, interactions, and random effects between city and other predictors in order to obtain the best fitting model.
 
-|        The final model for single-victim shootings is written out below:
+|        The final model for single-victim shootings is written out below (where $p_i$ represents the probability of getting fatally shot for shooting $i$):
 ```{r, eval = F}
-rand_fit4 <- glmer(fatal ~ SubjectRace + ob + ow + omult + gun + weapon_other + replica + knife + unarmed + (1 + gun | city) + SubjectGender, data = single_victims, family = "binomial", control=glmerControl(optimizer="bobyqa",optCtrl=list(maxfun=2e5)))
+rand_fit2 <- glmer(fatal ~ SubjectRace + ob + ow + omult + gun + weapon_other + replica + knife + (SubjectRace | city), data = single_victims, family = "binomial", control=glmerControl(optimizer="bobyqa",optCtrl=list(maxfun=2e5)))
 ```
 
 \begin{center}
 $$
-log(\frac{p_i}{(1-p_i)}) = \beta_0 + \beta_1\ SubjectRace_i + \beta_2\ OfficerBlack_i + \beta_3\ OfficerWhite_i + \beta_4\ MultipleOfficers_i
+log(\frac{p_i}{(1-p_i)}) = \beta_0 + \beta_{1j}\ VictimRace_{ij} + \beta_2\ OfficerBlack_i + \beta_3\ OfficerWhite_i + \beta_4\ MultipleOfficers_i
 $$
 $$
-+ \beta_{5j}\ VictimWithGun_{ij} + \beta_6\ VictimWithOther_i + \beta_7\ VictimWithReplica_i + \beta_8\ VictimWithKnife_i + \beta_9\ VictimUnarmed_i + b_i
++ \beta_5\ VictimWithGun_i + \beta_6\ VictimWithOther_i + \beta_7\ VictimWithReplica_i + \beta_8\ VictimWithKnife_i
+$$
+$$
+ + \beta_9\ VictimUnarmed_i + b_i
 $$
 $$
 b_i \sim N(0, \sigma_b^2)
 $$
 $$
-SubjectRace = \text{{White*, Black, Latino, Other}}
+VictimRace = \text{{White*, Black, Latino, Other}}
 $$
 \end{center}
-In the model above, it is important to note that the predictor for whether the victim was carrying a gun is varied by city. This means that there is both a random intercept for city as well as a random slope for whether the victim was carrying a gun.
+|        For single victims, the best fitting model was the one that used city as a random intercept and had random slopes for the SubjectRace in each of these cities. 
 
-|        The final model for multiple-victim shootings is written out below:
+|        The final model for multiple-victim shootings is written out below (where $p_i$ represents the probability of getting fatally shot for shooting $i$):
+
+```{r mult-fit, eval=F}
+rand_fitm <- glmer(fatal ~ sb + sl + so + ob + ol + omult + gun + knife + weapon_other + replica + I(black/white) + (1 + sb + sl | city), data = mult_victims, family = "binomial", control=glmerControl(optimizer="bobyqa",optCtrl=list(maxfun=2e5)))
+```
 \begin{center}
 $$
-log(\frac{p_i}{(1-p_i)}) = \beta_0 + \beta_1\ black\_victim\_present_i + \beta_2\ white\_victim\_present_i +  \beta_3\ latino\_victim\_present_i +
+log(\frac{p_i}{(1-p_i)}) = \beta_0 + \beta_{1j}\ VictimBlack_{ij} + \beta_{2j}\ VictimLatino_{ij} + \beta_3\ VictimOther_i
 $$
 $$
-\beta_4\ (\frac{black_i}{city\_pop_i}) + \beta_{5}\ black\_officer\_present_i + \beta_{6}\ white\_officer\_present_i +
++ \beta_4\ OfficerBlack_i + \beta_5\ OfficerLatino_i + \beta_6\ MultipleOfficers_i + \beta_7\ VictimWithGun_i
 $$
 $$
- \beta_{7}\ latino\_officer\_present_i + \beta_{8} \ victim\_armed\_gun_i + \beta_{9} \ white\_officer\_present_i*black\_victim\_present_i
+\beta_8\ VictimWithOther_i + \beta_9\ VictimWithReplica_i + \beta_{10}\ VictimWithKnife_i + \beta_{11}\ (\frac{black_i}{white_i}) + b_i
+$$
+$$
+b_i \sim N(0, \sigma_b^2)
 $$
 \end{center}
+|        For multiple victims, the best fitting model was the one that used city as a random intercept and had random slopes for whether a Black victim was present and whether a Latino victim was present in the shootings in each of these cities. It is important to note that none of the legislative predictors were useful in predicting the odds of someone being fatally shot in police shootings in either model. Additionally, $\frac{black_i}{white_i}$ refers to the proportion of black to white people in a city. This proved to be useful in increasing the predictive accuracy of the model.
 
 ## IV. Results
 
 ### Single Victims Model
 
-```{r random effects 4}
-rand_fit4 <- glmer(fatal ~ SubjectRace + ob + ow + omult + gun + weapon_other + replica + knife + unarmed + (1 + gun | city) + SubjectGender, data = single_victims, family = "binomial", control=glmerControl(optimizer="bobyqa",optCtrl=list(maxfun=2e5)))
-summary(rand_fit4)
-coef(rand_fit4)
-fixef(rand_fit4)
-ranef(rand_fit4)
+```{r single random effects}
+rand_fit2 <- glmer(fatal ~ SubjectRace + ob + ow + omult + gun + weapon_other + replica + knife + (SubjectRace | city), data = single_victims, family = "binomial", control=glmerControl(optimizer="bobyqa",optCtrl=list(maxfun=2e5)))
+kable(summary(rand_fit2)$coefficients)
 ```
+
+|        In this single victim model, the $\beta_0$ coefficient, which has a value of -0.57, represents the log odds of being fatally shot by police in a 'typical' scenario and city. 'Typical' can be defined as a shooting in which the victim is White and unarmed and there is only one officer present, who is neither Black nor White. Thus, $\beta_0 + b_i$, or the city-specific intercept, represents the log odds of being fatally shot for a 'typical' White, unarmed victim in city $i$ when there is only one officer present, who is neither Black nor White. The variabilities of the intercepts and slopes across different cities and different race groups within cities are all greater than 0, indicating that there is enough variation in the baseline odds of being shot fatally in different cities and different race groups within cities. From the fixed effect coefficients, we can see that generally, all other race types are less likely to be shot fatally than White 'typical' individuals. 
+
+|        The `ranef` function allows us to further quantify the difference between the average predicted log odds of being fatally shot for the general population versus that of a specific city and subject race type, other predictors remaining unchanged. This can be found in the Appendix. From this table, we can see that the city with the highest baseline odds of being shot fatally is Albuquerque, whereas the city with the lowest baseline odds of being shot fatally is Chicago. For White people in Chicago, the predicted log odds of being shot fatally is 0.76 less than that of in a 'typical' scenario and city. However, for Black people in Chicago, the predicted log odds of being shot fatally is actually 0.28 higher than that of a 'typical' scenario and city. In contrast, for Latino people in Chicago, the predicted log odds of being shot fatally is 0.23 lower than that of a 'typical' scenario and city, and for people of other race types in Chicago, the predicted log odds of being shot fatally is 2.86 lower than that of a 'typical' scenario and city. We can conclude that in Chicago, Black people are disproportionately shot fatally in police shootings. In Albuquerque, the trend is almost opposite: for Black people, the log odds of being shot fatally is 0.43 less than that of a 'typical' scenario and city, whereas for White people, the log odds of being shot fatally is 0.67 more. Overall, we can conclude that city plays a large role in whether a race type is fatally shot in police shootings, although the general trend is that White people are most likely to be shot fatally than other race types.
 
 ### Multiple Victims Model
 
+```{r mult random effects}
+rand_fitm <- glmer(fatal ~ sb + sl + so + ob + ol + omult + gun + knife + weapon_other + replica + I(black/white) + (1 + sb + sl | city), data = mult_victims, family = "binomial", control=glmerControl(optimizer="bobyqa",optCtrl=list(maxfun=2e5)))
+kable(summary(rand_fitm)$coefficients)
+kable(ranef(rand_fitm))
+```
+
+|        In this multiple victims model, the $\beta_0$ coefficient, which has a value of -1.77, represents the log odds of being fatally shot by police in a 'typical' scenario and city. 'Typical' can be defined as a shooting in which the victim is White and unarmed and there is only one officer present, who is neither Black nor Latino. Thus, $\beta_0 + b_i$, or the city-specific intercept, represents the log odds of being fatally shot for a 'typical' White, unarmed victim in city $i$ when there is only one officer present, who is neither Black nor White. The variabilities of the intercepts and slopes across different cities and different race groups within cities are all greater than 0, indicating that there is enough variation in the baseline odds of being shot fatally in different cities and different race groups within cities. From the fixed effect coefficients, we can see that generally, all other race types are less likely to be shot fatally than White 'typical' individuals. 
+
+|        The `ranef` function also allows us to quantify the difference between the average predicted log odds of being fatally shot for the general population versus that of a specific city and subject race type, other predictors remaining unchanged. This can be found in the Appendix. From this table, we can see that the city with the highest baseline odds of being shot fatally is Albuquerque, whereas the city with the lowest baseline odds of being shot fatally is Chicago. For White people in Chicago, the predicted log odds of being shot fatally is 0.76 less than that of in a 'typical' scenario and city. However, for Black people in Chicago, the predicted log odds of being shot fatally is actually 0.28 higher than that of a 'typical' scenario and city. In contrast, for Latino people in Chicago, the predicted log odds of being shot fatally is 0.23 lower than that of a 'typical' scenario and city, and for people of other race types in Chicago, the predicted log odds of being shot fatally is 2.86 lower than that of a 'typical' scenario and city. We can conclude that in Chicago, Black people are disproportionately shot fatally in police shootings. In Albuquerque, the trend is almost opposite: for Black people, the log odds of being shot fatally is 0.43 less than that of a 'typical' scenario and city, whereas for White people, the log odds of being shot fatally is 0.67 more. Overall, we can conclude that city plays a large role in whether a race type is fatally shot in police shootings, although the general trend is that White people are most likely to be shot fatally than other race types.
+
+### Differences Between Single and Multiple Victims
+
 ### Model Validation and Diagnostics
 
+|        As I mentioned earlier, I performed 5-fold cross-validation on my models to assess model accuracy and fit. I chose to use 5 folds and 85% of the data because this is commonly used in practice, but I tried it with 90% of the data as well just to verify that my cross-validation technique was not biased for the percentage of the full data allocated for the training set. I used the `groupdata2` R package to partition our data set so that the training set contained 85% of the data from the full dataset, and then I ran 5-fold cross-validation on this training set before predicting on the test set. When assessing the performance of different models, we considered a higher average cross-validation and test set prediction accuracy to be indicative of a better model. For the single victims model, I achieved an average 5-fold cross-validation prediction accuracy of 0.66 and a test set prediction accuracy of 0.70. For the multiple victims model, I achieved an average 5-fold cross-validation prediction accuracy of 0.61, and a test set prediction accuracy of 0.63.
+
 ### Sensitivity Analysis
-TO DO: 
-- fix my models -- backward selection 
-- random effects by city, maybe race | city 
-- more interactions 
-
-### Analysis Plan
-
-|        Preliminarily, it appears that none of the legislation variables were significant in predicting whether one was shot fatally or not, and thus these were not included in either of the models. Additionally, victim and officer race both are significant individually and as part of interaction terms, which will be interesting to quantify. As expected, the coefficient for subject race type Black is positive in both models, meaning Black victims are more likely to be shot fatally. In the next revision, when quantifying the effects of each of these predictors on police shooting fatality, I will be analyzing the coefficients in terms of odds ratios, since I used logistic regression models. I also will most likely change the baseline to be White for both victim and officer race, since I want to investigate racism against minorities specifically in the law enforcement system.   
-
-|        For sensitivity analysis, I plan to perform cross-validation on the dataset by holding out 10% of the data to use as a test set and training my models on the other 90% of the data as a way to assess prediction accuracy. For model diagnostics, I will plot binned residual plots and ROC curves to assess how well my models fit the data.
 
 
 ## V. Discussion and Conclusion
 
-### Strengths and Limitations
-
+|        Overall, 
 |        One strength of my analysis is that I am considering many variables as predictors, from individual level data to contextual predictors, such as state gun legislation. This allows me to thoroughly explore and determine whether the relationships between a wide range of potential predictors and police shooting fatality in the context of police brutality are significant in any types of shootings (single vs. multiple victims, for example). There are several limitations to this study. For example, the VICE News dataset spans over the years 2010 to 2016, and neither of my models will be exploring time series data whatsoever. Thus, the aspect of time may be playing some sort of effect on my response variable that I am not accurately capturing in my models. There are also several other confounding factors that have not been accounted for, such as how well one can shoot at baseline or what training they have received with regards to shooting. Additionally, when cleaning the data, there were several "Unknown" values in the fatality column. Unknown values were assumed to represent "No" in this study, although this may not necessarily be true, to allow for more straightforward cleaning of the data and not lose too many observations in the data. Finally, there were less than 200 cases in which there were multiple victims in my final dataset, which is a relatively small sample size. Thus, it may be necessary to take the results from the multiple-victim model with a grain of salt.
 
 
@@ -198,13 +297,38 @@ mult_victims <- final_df %>%
 
 #### Single-Victim Shooting
 ```{r single fit}
-fit9 <- glm(formula = fatal ~ SubjectRace + I(black/city_pop_2013) + ob + ow + ol + ow:SubjectRace + gun, family = binomial, data=single_victims)
-kable(summary(fit9)$coefficients)
+rand_fit2 <- glmer(fatal ~ SubjectRace + ob + ow + omult + gun + weapon_other + replica + knife + (SubjectRace | city), data = single_victims, family = "binomial", control=glmerControl(optimizer="bobyqa",optCtrl=list(maxfun=2e5)))
+kable(ranef(rand_fit2), caption = "Random Effects Coefficients for Single-Victim Shootings")
 ```
 
 #### Multiple-Victim Shooting
 ```{r mult fit}
-mult1 <- glm(formula = fatal ~ sb + sw + sl + I(black/city_pop_2013) + ob + ow + ol + ow:sb + gun, family = binomial, data=mult_victims)
-kable(summary(mult1)$coefficients)
+rand_fitm <- glmer(fatal ~ sb + sl + so + ob + ol + omult + gun + knife + weapon_other + replica + I(black/white) + (1 + sb + sl | city), data = mult_victims, family = "binomial", control=glmerControl(optimizer="bobyqa",optCtrl=list(maxfun=2e5)))
+kable(ranef(rand_fitm), caption ="Random Effects Coefficients for Multiple-Victim Shootings")
 ```
+```{r validate rand_fit2}
+set.seed(1)
+
+Train <- createDataPartition(mult_victims$fatal, p=0.85, list=FALSE)
+training <- single_victims[ Train, ]
+testing <- single_victims[ -Train, ]
+
+data <- fold(
+  training,
+  k = 5
+) %>%
+  arrange(.folds)
+
+m0 <- 'fatal ~ sb + sl + so + ob + ol + omult + gun + knife + weapon_other + replica + I(black/white) + (1 + sb + sl | city)'
+p0 <- crossvalidate(data, k = 5, model = m0, dependent = 'fatal', random = TRUE)
+paste0("Average cross-validation prediction accuracy: ", mean(p0))
+
+rand_fitm <- glmer(m0, training, family = "binomial", control=glmerControl(optimizer="bobyqa",optCtrl=list(maxfun=2e5)))
+preds <- predict(rand_fitm, testing, type = "response", allow.new.levels=TRUE)
+fit.convert <- ifelse(preds < 0.5, 0, 1)
+kable(table(fit.convert, testing[['fatal']]))
+m <- mean(fit.convert == testing[['fatal']])
+paste0("Test set prediction accuracy: ", m)
+```
+
 
